Dashboard.cydsn/REBUILD.log
--------------- Rebuild Started: 02/22/2020 12:55:46 Project: Dashboard, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\Dashboard.cycdx"
Deleting file ".\Dashboard.svd"
Deleting file ".\Dashboard.rpt"
Deleting file ".\Dashboard_timing.html"
cydsfit.exe -.appdatapath "C:\Users\ianrd\AppData\Local\Cypress Semiconductor\PSoC Creator\4.2" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p C:\cygwin\home\ianrd\FRUCD-Dashboard\Dashboard.cydsn\Dashboard.cyprj -d CY8C5868AXI-LP035 -s C:\cygwin\home\ianrd\FRUCD-Dashboard\Dashboard.cydsn\Generated_Source\PSoC5 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
ADD: sdb.M0060: warning: Warning in component: CAN. The BUS_CLK clock accuracy should be 0.5% or better. Please, use an external XTAL or external clock source to meet the CAN accurate clocking requirements.
 * C:\cygwin\home\ianrd\FRUCD-Dashboard\Dashboard.cydsn\TopDesign\TopDesign.cysch (Instance:CAN)
HDL Generation...
Synthesis...
Tech Mapping...
ADD: pft.M0040: information: The following 14 pin(s) will be assigned a location by the fitter: LED(0), LED_1(0), RGB1_2(0), RGB2_2(0), RGB3_2(0), SD(0), SD(1), SD(2), SD(3), SD(4), SD(5), SD(6), SD(7), WDT_Reset(0)
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/TFT_Library.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -Og -c TFT_Library.c -o .\CortexM3\ARM_GCC_541\Debug\TFT_Library.o
TFT_Library.c: In function 'libTFT_DrawBitmap':
TFT_Library.c:444:19: warning: implicit declaration of function 'stoi' [-Wimplicit-function-declaration]
     pixelOffset = stoi(parsePixelOffset,nullptr,16);
                   ^
TFT_Library.c:444:41: error: 'nullptr' undeclared (first use in this function)
     pixelOffset = stoi(parsePixelOffset,nullptr,16);
                                         ^
TFT_Library.c:444:41: note: each undeclared identifier is reported only once for each function it appears in
TFT_Library.c:440:9: warning: variable 'pixelOffset' set but not used [-Wunused-but-set-variable]
     int pixelOffset;
         ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 02/22/2020 12:56:08 ---------------
